--- a/L4.md
+++ b/L4.md
@@ -2,3 +2,7 @@
 ## Laboratorio 4: Proceso aleatorio sinusoidal en fase y en cuadratura
 ### Realizado por: José Pablo Araya Garbanzo
 ### Carné: B80508
+
+Un proceso estocástico está definido por: 
+
+$$\displaystyle W(t) = X \, cos(\omega_{0}t) + Y \, sin(\omega_{0}t) $$
