--- a/L4.md
+++ b/L4.md
@@ -5,4 +5,4 @@
 
 Un proceso estocástico está definido por: 
 
-$$\displaystyle W(t) = X \, cos(\omega_{0}t) + Y \, sin(\omega_{0}t) $$
+<img src="https://render.githubusercontent.com/render/math?math=W(t) = Xcos(\omega_{0}t) + Ysin(\omega_{0}t)">
