--- a/L4.md
+++ b/L4.md
@@ -5,4 +5,4 @@
 
 Un proceso estocástico está definido por: 
 
-<img src="https://render.githubusercontent.com/render/math?math=W(t) = Xcos(\omega_{0}t) \sum Ysin(\omega_{0}t)">
+<img src="https://render.githubusercontent.com/render/math?math=W(t) = Xcos(\omega_{0}t) %2B Ysin(\omega_{0}t)">
