--- a/L4.md
+++ b/L4.md
@@ -6,3 +6,9 @@
 Un proceso estocástico está definido por: 
 
 <img src="https://render.githubusercontent.com/render/math?math=W(t) = Xcos(\omega_{0}t) %2B Ysin(\omega_{0}t)">
+
+Donde se escogió a X y Y variables aleatorias con distribución normal, con valores medios iguales a cero y varianzas iguales de la manera:
+<img src="https://render.githubusercontent.com/render/math?math=\sigma_x^2 = \sigma_y^2 = 25">
+
+A partir de estos datos, y teniendo en cuenta que omega posee el valor de una constante el cual se escogió como 5. Se ha de comprobar que la función de autocorrelación de W(t) sería igual a : 
+<img src="https://render.githubusercontent.com/render/math?math=R_{WW}(\tau) = \sigma ^2 cos(\omega_{0}t)">
