--- a/L4.md
+++ b/L4.md
@@ -11,4 +11,20 @@ Donde se escogió a X y Y variables aleatorias con distribución normal, con val
 <img src="https://render.githubusercontent.com/render/math?math=\sigma_x^2 = \sigma_y^2 = 25">
 
 A partir de estos datos, y teniendo en cuenta que omega posee el valor de una constante el cual se escogió como 5. Se ha de comprobar que la función de autocorrelación de W(t) sería igual a : 
-<img src="https://render.githubusercontent.com/render/math?math=R_{WW}(\tau) = \sigma ^2 cos(\omega_{0}t)">
+<img src="https://render.githubusercontent.com/render/math?math=R_{WW}(\tau) = \sigma ^2 cos(\omega_{0}\tau)">
+
+Se decició implementar una solución en Python del problema anterior, donde primero, se establecen las variables aleatorias con las que se trabajan. Se les indican sus valores medios y desviaciones estándar, además, son una función gaussiana.
+
+```Python
+vaA = stats.norm(0, 5)
+vaY = stats.norm(0, 5)
+
+# Creación del vector de tiempo
+T = 100			# número de elementos
+t_final = 10	# tiempo en segundos
+t = np.linspace(0, t_final, T)
+
+# Inicialización del proceso aleatorio X(t) con N realizaciones
+N = 10
+X_t = np.empty((N, len(t)))	# N funciones del tiempo x(t) con T puntos
+```
