--- a/L4.md
+++ b/L4.md
@@ -13,7 +13,7 @@ Donde se escogió a X y Y variables aleatorias con distribución normal, con val
 A partir de estos datos, y teniendo en cuenta que omega posee el valor de una constante el cual se escogió como 5. Se ha de comprobar que la función de autocorrelación de W(t) sería igual a : 
 <img src="https://render.githubusercontent.com/render/math?math=R_{WW}(\tau) = \sigma ^2 cos(\omega_{0}\tau)">
 
-Se decició implementar una solución en Python del problema anterior, donde primero, se establecen las variables aleatorias con las que se trabajan. Se les indican sus valores medios y desviaciones estándar, además, son una función gaussiana.
+Se decició implementar una solución en Python del problema anterior, donde primero, se establecen las variables aleatorias con las que se trabajan. Se les indican sus valores medios y desviaciones estándar, además, son una función gaussiana. Además, se ha de crear un intervalo de tiempo para poder, hacer la simulación en el "tiempo". Se decide un tiempo final de 10 segundos, partiendo desde 0 y con 100 intervalos entre 0 y 10 segundos. Se decide después, crear la cantidad de realizaciones para iniciar el proceso aleatorio; se utilizarán 10 por tanto, implica que habrán 10 variables aleatorias de X y 10 de Y. El siguiente código muestra explícitamente cómo se desarrolló esta parte.
 
 ```Python
 vaA = stats.norm(0, 5)
@@ -27,4 +27,46 @@ t = np.linspace(0, t_final, T)
 # Inicialización del proceso aleatorio X(t) con N realizaciones
 N = 10
 X_t = np.empty((N, len(t)))	# N funciones del tiempo x(t) con T puntos
+```
+Posteriormente, empieza las realizaciones del proceso aleatorio. Para cada una de las N repeticiones se crean nuevas variables aleatorias X y Y, con base en los parámetros dados para X y Y (media = 0, desviacióne estándar = 5, distribución normal) y se ejecuta la función a comprobar que es la ecuación de W(t). Cada repetición se guardan los valores de la función W(t) y de esta manera se crea el proceso aleatorio. El código se vería de la siguiente manera: 
+
+```Python
+# Creación de las muestras del proceso x(t) (A y Y independientes)
+
+for i in range(N):
+	A = vaA.rvs()
+	Y = vaY.rvs()
+	x_t = A * np.cos(5*t) + Y * np.sin(5*t)
+	X_t[i,:] = x_t
+```
+
+Con el proceso aleatorio ya obtenido, lo que se quería obtener en el enunciado era comprobar la autocorrelación y de la misma manera se puede indicar como sería el valor medio del proceso aleatorio. El valor teórico de la autocorrelación se había indicado en el enunciado pero el del valor medio se puede razonar debido a que ambas X y Y poseen valor medio igual a cero, entonces el valor medio teórico sería 0. Por tanto, se puede gráficar el promedio de las realizaciones anteriores, junto al promedio teórico y junto a las realizaciones, como se ve en la imagen adjuntada en el repositorio. No se esparaba que fuera cero el promedio de las realizaciones, puesto que cada variable aleatoria es distinta y son distribuciones con tendencia normal, no son ideales por tanto, aún mantienen cierta componente periódica. Con el siguiente códgio se aprecia como se grafica y compara los promedios:
+
+```Python
+P = [np.mean(X_t[:,i]) for i in range(len(t))]
+plt.plot(t, P, lw=6, label='Promedio de las realizaciones')
+
+# Graficar el resultado teórico del valor esperado
+E = 0*t
+plt.plot(t, E, '-.', lw=4, label='Promedio teórico')
+```
+
+Finalmente, se realiza el mismo procedimiento para la autocorrelación. A partir de las realizaciones obtenidas se calcula al autocorrelación "experimental" y se grafica junto a la teórica. Cada realización poseera su propia autocorrelación, por tanto serán 10 gráficas de autocorrelación comparadas a la autocorrelación teórica; sin embargo, se puede notar en la imagen adjunta en el repositorio que en efecto, se cumple la misma tendencia de autocorrelación, por ende se puede afirmar que los resultados teóricos son bastante cercanos a la autocorrelación teórica, lo que comprueba lo pedido en el enunciado. El código para esta parte sería el siguiente:
+
+```Python
+# T valores de desplazamiento tau
+desplazamiento = np.arange(T)
+taus = desplazamiento/t_final
+
+# Inicialización de matriz de valores de correlación para las N funciones
+corr = np.empty((N, len(desplazamiento)))
+
+# Cálculo de correlación para cada valor de tau
+for n in range(N):
+	for i, tau in enumerate(desplazamiento):
+		corr[n, i] = np.correlate(X_t[n,:], np.roll(X_t[n,:], tau))/T
+	plt.plot(taus, corr[n,:])
+
+# Valor teórico de correlación
+Rxx = 25 * np.cos(5*taus)
 ```
